--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Varsha-Portfolio-Angular": {
+    "Portfolio": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Varsha-Portfolio-Angular",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -58,18 +58,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Varsha-Portfolio-Angular:build"
+            "browserTarget": "Portfolio:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Varsha-Portfolio-Angular:build:production"
+              "browserTarget": "Portfolio:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Varsha-Portfolio-Angular:build"
+            "browserTarget": "Portfolio:build"
           }
         },
         "test": {
@@ -106,16 +106,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Varsha-Portfolio-Angular:serve"
+            "devServerTarget": "Portfolio:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Varsha-Portfolio-Angular:serve:production"
+              "devServerTarget": "Portfolio:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Varsha-Portfolio-Angular"
+  "defaultProject": "Portfolio"
 }
