--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "varsha-portfolio-angular",
+  "name": "portfolio",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "bootstrap": "^4.4.1",
+    "firebase": "^7.14.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.0",
     "rxjs": "~6.4.0",
