--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
+    "@angular/pwa": "^0.901.3",
     "@angular/router": "~8.1.2",
+    "@angular/service-worker": "~8.1.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.2",
     "hammerjs": "^2.0.8",
